[core] perf: group service handles updates of vcards asynchronously now (with dedupe)
This is required when a setup clone is restored: we update the same group over and over again to add memberships